2015-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	Remove bogus warning.

2015-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_setup_region_attrs), (gst_ttmlrender_show_layout),
	(gst_ttmlrender_render_outline), (gst_ttmlrender_show_regions):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Add support for writingMode.

2015-03-04  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlenums.h:
	* src/gstttmlrender.c:
	(gst_ttmlrender_pango_attr_reverse_oblique_new),
	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
	(gst_ttmlrender_init):
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	* src/gstttmlutils.c:
	Add support for the reverseOblique fontStyle.

2015-03-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse):
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_reset),
	(gst_ttml_state_set_attribute), (gst_ttml_state_get_attribute):
	* src/gstttmlstate.h:
	* src/gstttmlutils.c:
	Add support for subFrameRate.

2015-03-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_pango_attr_reverse_new),
	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
	(gst_ttmlrender_init):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Add support for reverse (Right-to-Left) text.

2015-03-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
	Take the possible individual offset of each glyph into account.

2015-03-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):